# ghnstat

./: CMakeLists.txt  README.md  main.cpp
collector/: CMakeLists.txt
collector/include/: Collector.h  CollectorThread.h  TrafficReader.h  TrafficStorage.h  TrafficWritter.h  Utils.h
collector/src/: Collector.cpp  CollectorThread.cpp  TrafficReader.cpp  TrafficWritter.cpp  Utils.cpp
include/: Alarm.h  Collector.h  CollectorUtils.h  DetectorEngine.h  Exceptions.h  JsonConversion.h  ScanDetector.h  TrafficData.h  TrafficReader.h  TrafficStorage.h  TrafficValidator.h  TrafficWritter.h  Utils.h
sample/: stat_2.json  stat_n.schema.json  statistics
scripts/: calculate.sh
src/: Alarm.cpp  Collector.cpp  CollectorUtils.cpp  DetectorEngine.cpp  JsonConversion.cpp  ScanDetector.cpp  TrafficData.cpp  TrafficReader.cpp  TrafficStorage.cpp  TrafficValidator.cpp  TrafficWritter.cpp  Utils.cpp
tests/: tcpstat_2.json
uml/: app_use_case.txt  class.txt  root_use_case.txt
uml/class/: class.txt  collector.txt  main.txt  threads.txt  trafic_storage.txt  utils.txt
uml/sequence/: help.txt  main.txt  read.txt  write.txt
uml/use_case/: root_use_case.txt
